# quickqc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  LICENSE  README.md
.github/: FUNDING.yml  pull_request_template.md  release-notes.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/workflows/: ci.yml
Casks/: quickqc.rb
scripts/: generate-release-notes.sh  install-linux.sh  install-windows.ps1
src/: clipboardwatcher.cpp  clipboardwatcher.h  clipitem.h  clipstorage.cpp  clipstorage.h  globalhotkey.cpp  globalhotkey.h  main.cpp  mainwindow.cpp  mainwindow.h
